2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.cc: output HAVE_OPENGL setting

2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* forked_player.cc: don't go into infinite loop when player fails
	* shapeid.*: minor cleanup
	* objs/egg.cc: prevent egg from retriggering immediately
	* gamerend.cc, Gump_manager.*: draw modal gumps even when in dont_move

2003-02-20  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc (Combat): Wisps can teleport (partly done).
	* actors.cc:  Wisps (and others) always get at least 1 attack
	point for their builtin weapon.

2003-02-18  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Exploding weapons implemented.

2003-02-17  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.{cc,h},etc:  find_door() speeds up pathfinding.

2003-02-16  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc (Dragging_info): Don't drop above where we can see.

2003-02-15  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,objs/objs.cc,objs/chunks.cc:  A removed object now has
	its chunk coords set to (255, 255).

	* objs/chunks.cc (Chunk_cache): Rewrote 'blocking' code.  Now a
	0-3 element count is maintained.

	* usecode/intrinsics.cc: Mark object as deleted before putting it
	back in the world.

2003-02-12  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/iregobjs.cc,gamemap.cc: Use 'invisible' flag from quality
	byte.  Fixes 'caltrops not invisible' bug.
	* gamerend.cc (using): Render all flat tiles before rendering the
	RLE flats.  Fixes 'chopped-off' rocks in desert.

2003-02-11  Jeff Freedman  <jeff@amy.nerble.net>

	* monsters.cc: Cyclops cause quakes when they walk.

2003-02-05 Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* README.Qtopia: few changes to match the current compile method
	* configure.in: reverted the zaurus/embeddix $host_vendor variable
	
2003-01-27  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: When resurrecting, set schedule to something reasonable.
